Have server.cfg exec rcon.cfg.

--- a/server/server.cfg
+++ b/server/server.cfg
@@ -6,7 +6,7 @@ port 26000
 hostname "pup and friends"
 sv_motd "owo whats this?~"
 
-//rcon_password ""
+exec rcon.cfg
 
 // Logging is probably not useful when not debugging problems.
 // The log file can get very large over time.
