--- a/server/server.cfg
+++ b/server/server.cfg
@@ -8,6 +8,9 @@ sv_motd "owo whats this?~"
 
 exec rcon.cfg
 
+// Throw chat logs at localhost, port (from above) + 1,000.
+log_dest_udp 127.0.0.1:27000
+
 // Logging is probably not useful when not debugging problems.
 // The log file can get very large over time.
 //log_file "server.log"
@@ -68,6 +71,8 @@ g_maplist_votable 6
 
 // Allow people to see number of votes for each map.
 g_maplist_votable_nodetail 0
+
+exec votes.cfg
 
 //////////
 // Taunts
