--- a/server/votes.cfg
+++ b/server/votes.cfg
@@ -17,8 +17,8 @@
 //  nb (nexball)
 
 
-sv_vote_commands "restart fraglimit chmap gotomap nextmap endmatch reducematchtime extendmatchtime allready kick cointoss movetoauto shuffleteams"
-
+// chmap, gotomap, nextmap
+sv_vote_commands "restart allready endmatch kick fraglimit reducematchtim extendmatchtime shuffleteams"
 
 alias dm "gametype dm"
 addvote dm
