set sv_adminnick

--- a/server/server.cfg
+++ b/server/server.cfg
@@ -6,6 +6,9 @@ port 26000
 hostname "pup and friends"
 sv_motd "owo whats this?~"
 
+// `say blah` => `<${sv_adminnick}> message` in console
+sv_adminnick server
+
 exec rcon.cfg
 
 // Throw chat logs at localhost, port (from above) + 1,000.
