--- a/server/votes.cfg
+++ b/server/votes.cfg
@@ -18,7 +18,7 @@
 
 
 // chmap, gotomap, nextmap
-sv_vote_commands "restart allready endmatch kick fraglimit reducematchtim extendmatchtime shuffleteams"
+sv_vote_commands "restart nextmap gotomap allready endmatch kick fraglimit reducematchtime extendmatchtime shuffleteams"
 
 alias dm "gametype dm"
 addvote dm
